<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/bg"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main" tools:context=".MainActivity"
    android:focusableInTouchMode="false"
    android:focusable="false"
    android:visibility="visible">

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about"
        android:id="@+id/about"
        android:onClick="about"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/street"
        android:id="@+id/textView5"
        android:textSize="22sp"
        android:labelFor="@+id/editText2"
        android:textColor="#000000"
        android:layout_marginTop="75dp"
        android:layout_below="@+id/textView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText2"
        android:inputType="text"
        android:textColorHint="#0f38ef"
        android:textColorHighlight="#000000"
        android:width="800dp"
        android:textColor="#000000"
        android:textColorLink="#0f38ef"
        android:layout_alignBottom="@+id/textView5"
        android:layout_toRightOf="@+id/textView9"
        android:layout_toEndOf="@+id/textView9" />

    <TextView
        android:text="@string/forecast_Search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:height="36sp"
        android:textColor="#000000"
        android:textIsSelectable="false"
        android:textSize="28sp"
        android:textStyle="bold"
        android:id="@+id/textView3"
        android:layout_marginTop="30dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/city"
        android:id="@+id/textView6"
        android:textSize="22sp"
        android:textColor="#000000"
        android:layout_below="@id/textView5"
        android:layout_marginTop="30dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText3"
        android:inputType="text"
        android:width="800dp"
        android:textColor="#000000"
        android:textColorHighlight="#242f9e"
        android:textColorLink="#2f3fa5"
        android:layout_alignBottom="@+id/textView6"
        android:layout_toRightOf="@+id/textView9"
        android:layout_toEndOf="@+id/textView9" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search"
        android:id="@+id/button"
        android:layout_marginBottom="86dp"
        android:layout_above="@+id/about"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear"
        android:id="@+id/button2"
        android:layout_alignTop="@+id/button"
        android:layout_toRightOf="@+id/button"
        android:layout_toEndOf="@+id/button" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/state"
        android:id="@+id/textView8"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="#000000"
        android:textSize="22sp" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinner2"
        android:dropDownWidth="wrap_content"
        android:spinnerMode="dropdown"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@+id/textView9"
        android:layout_toRightOf="@+id/textView9" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/degree"
        android:id="@+id/textView9"
        android:layout_below="@+id/textView8"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="27dp"
        android:textSize="22sp"
        android:textColor="#000000" />


    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/radio"
        android:layout_alignTop="@+id/textView9"
        android:layout_toRightOf="@+id/button"
        android:layout_toEndOf="@+id/button">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fahrenheit"
            android:id="@+id/radioButton"
            android:checked="true"
            android:textColor="#000000"
            android:textSize="16sp"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/celsius"
            android:id="@+id/radioButton2"
            android:checked="false"
            android:layout_marginRight="28dp"
            android:layout_marginEnd="28dp"
            android:textSize="16sp" />
    </RadioGroup>
    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:src="@drawable/forecast_logo"
        android:contentDescription="Powered By:"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/textView4" />
    <TextView
        android:id="@+id/myImageViewText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageView1"
        android:layout_alignTop="@+id/imageView1"
        android:layout_alignRight="@+id/imageView1"
        android:layout_margin="1dp"
        android:gravity="center"
        android:text="Powered By:"
        android:textColor="#000000" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/textView4"
        android:textColor="#FF0000"
        android:paddingTop="20dp"
        android:textSize="18sp"
        android:layout_below="@id/button2"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
